Image bug fix. Image inside question tile now stretches to full height of its container

--- a/client/src/components/QuestionTileComponent/QuestionTileComponent.css
+++ b/client/src/components/QuestionTileComponent/QuestionTileComponent.css
@@ -38,7 +38,7 @@
 
 .question-tile__image-container img {
     max-width: 100%;
-    max-height: 100%;
+    height: 100%;
 }
 
 .question-tile__content {
